[package]
name = "ghn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-textarea = { version = "0.7", features = ["crossterm", "ratatui"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
